--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,8 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>OOYSHG - Project Detail</title>
+        <link rel="icon" type="image/png" href="images/logo.png">
+        <title>OOYSHG - About Us</title>
 
         <!-- CSS FILES -->                
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,7 +54,7 @@
                                 <a class="nav-link click-scroll" href="index.html#section_1">Home</a>
                             </li>
     
-                            <li class="nav-item">
+                            <li class="nav-item active">
                                 <a class="nav-link" href="aboutus.html">About</a>
                             </li>
 
@@ -140,8 +141,8 @@
                         <p>
                             <strong class="text-white me-3">Any Questions?</strong>
 
-                            <a href="tel: 010-020-0340" class="contact-link">
-                            	010-020-0340
+                            <a href="telto: +254-706-729-292" class="contact-link">
+                            	+254 706 729 292
                             </a>
                         </p>
                     </div>
@@ -331,8 +332,8 @@
                         </p>
 
                         <p class="d-flex me-lg-3">
-                            <span>Sat-Sun</span>
-                            9:30 AM - 2:30 PM
+                            <!-- <span>Sat-Sun</span>
+                            9:30 AM - 2:30 PM -->
                         </p>
                         <br>
                         <p class="copyright-text">Copyright © 2023 OOYSHG</p>
