--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,8 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Tiya Golf Club - Event Listing</title>
+        <link rel="icon" type="image/png" href="images/logo.png">
+        <title>OOYSHG - Project Listing</title>
 
         <!-- CSS FILES -->                
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,7 +62,7 @@
                                 <a class="nav-link" href="team.html">Management</a>
                             </li>
 
-                            <li class="nav-item">
+                            <li class="nav-item active">
                                 <a class="nav-link" href="projects.html">Projects</a>
                             </li>
 
@@ -89,7 +90,7 @@
                         </ul>
 
                         <div class="d-none d-lg-block ms-lg-3">
-                            <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">Member Login</a>
+                            <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">Login</a>
                         </div>
                     </div>
                 </div>
@@ -97,7 +98,7 @@
 
             <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">                
                 <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasExampleLabel">Member Login</h5>
+                    <h5 class="offcanvas-title" id="offcanvasExampleLabel">Login</h5>
                     
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
@@ -140,8 +141,8 @@
                         <p>
                             <strong class="text-white me-3">Any Questions?</strong>
 
-                            <a href="tel: 010-020-0340" class="contact-link">
-                            	010-020-0340
+                            <a href="telto: +254706729292" class="contact-link">
+                            	+254 706 729 292
                             </a>
                         </p>
                     </div>
@@ -162,7 +163,7 @@
 
                         <div class="col-lg-6 col-12">
 
-                            <h1 class="text-white mb-4 pb-2">Projects Listing</h1>
+                            <h1 class="text-white mb-4 pb-2">Project Listing</h1>
 
                             <a href="#section_3" class="btn custom-btn smoothscroll me-3">Explore our Projects</a>
                         </div>
@@ -209,14 +210,14 @@
                                     <div class="d-flex flex-wrap align-items-center mb-1">
                                         <span class="custom-block-span">Location:</span>
 
-                                        <p class="mb-0">National Center, NYC</p>
+                                        <p class="mb-0">Maili Tisa</p>
                                     </div>
 
-                                    <div class="d-flex flex-wrap align-items-center">
+                                    <!-- <div class="d-flex flex-wrap align-items-center">
                                         <span class="custom-block-span">Ticket:</span>
 
                                         <p class="mb-0">$150</p>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -248,13 +249,13 @@
                                     <div class="d-flex flex-wrap align-items-center mb-1">
                                         <span class="custom-block-span">Location:</span>
 
-                                        <p class="mb-0">National Center, NYC</p>
+                                        <p class="mb-0">Namanga Ward</p>
                                     </div>
 
                                     <div class="d-flex flex-wrap align-items-center">
-                                        <span class="custom-block-span">Ticket:</span>
+                                        <!-- <span class="custom-block-span">Ticket:</span>
 
-                                        <p class="mb-0">$250</p>
+                                        <p class="mb-0">$250</p> -->
                                     </div>
                                 </div>
                             </div>
@@ -306,19 +307,19 @@
                                             <div class="d-flex flex-wrap align-items-center mb-1">
                                                 <span class="custom-block-span">Location:</span>
 
-                                                <p class="mb-0">National Center, NYC</p>
+                                                <p class="mb-0">Namanga Town</p>
                                             </div>
 
                                             <div class="d-flex flex-wrap align-items-center">
-                                                <span class="custom-block-span">Ticket:</span>
+                                                <!-- <span class="custom-block-span">Ticket:</span>
 
-                                                <p class="mb-0">$250</p>
+                                                <p class="mb-0">$250</p> -->
                                             </div>
                                         </div>
 
-                                        <div class="d-flex align-items-center ms-lg-auto">
-                                            <a href="event-detail.html" class="btn custom-btn">Buy Ticket</a>
-                                        </div>
+                                        <!-- <div class="d-flex align-items-center ms-lg-auto">
+                                            <a href="#" class="btn custom-btn">Know more</a>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
@@ -357,19 +358,19 @@
                                             <div class="d-flex flex-wrap align-items-center mb-1">
                                                 <span class="custom-block-span">Location:</span>
 
-                                                <p class="mb-0">National Center, NYC</p>
+                                                <p class="mb-0">Maili Tisa Green House</p>
                                             </div>
 
                                             <div class="d-flex flex-wrap align-items-center">
-                                                <span class="custom-block-span">Ticket:</span>
+                                                <!-- <span class="custom-block-span">Ticket:</span>
 
-                                                <p class="mb-0">$350</p>
+                                                <p class="mb-0">$350</p> -->
                                             </div>
                                         </div>
 
-                                        <div class="d-flex align-items-center ms-lg-auto">
-                                            <a href="event-detail.html" class="btn custom-btn">Buy Ticket</a>
-                                        </div>
+                                        <!-- <div class="d-flex align-items-center ms-lg-auto">
+                                            <a href="#" class="btn custom-btn">Read more</a>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
@@ -403,8 +404,6 @@
                         </p>
 
                         <p class="d-flex me-lg-3">
-                            <span>Sat-Sun</span>
-                            9:30 AM - 2:30 PM
                         </p>
                         <br>
                         <p class="copyright-text">Copyright © 2023 OOYSHG</p>
