--- a/donate.html
+++ b/donate.html
@@ -7,7 +7,8 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>OOYSHG - Project Detail</title>
+        <link rel="icon" type="image/png" href="images/logo.png">
+        <title>OOYSHG - Donate</title>
 
         <!-- CSS FILES -->                
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -69,7 +70,7 @@
                                 <a class="nav-link click-scroll" href="index.html#section_5">Partners</a>
                             </li>
 
-                            <li class="nav-item">
+                            <li class="nav-item active">
                                 <a class="nav-link" href="donate.html">Donate</a>
                             </li>
 
@@ -89,7 +90,7 @@
                         </ul>
 
                         <div class="d-none d-lg-block ms-lg-3">
-                            <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">Member Login</a>
+                            <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">Login</a>
                         </div>
                     </div>
                 </div>
@@ -97,7 +98,7 @@
 
             <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">                
                 <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasExampleLabel">Member Login</h5>
+                    <h5 class="offcanvas-title" id="offcanvasExampleLabel">Login</h5>
                     
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
@@ -140,8 +141,8 @@
                         <p>
                             <strong class="text-white me-3">Any Questions?</strong>
 
-                            <a href="tel: 010-020-0340" class="contact-link">
-                            	010-020-0340
+                            <a href="telto: +254706729292" class="contact-link">
+                            	+254 706 729 292
                             </a>
                         </p>
                     </div>
@@ -256,8 +257,8 @@
                         </p>
 
                         <p class="d-flex me-lg-3">
-                            <span>Sat-Sun</span>
-                            9:30 AM - 2:30 PM
+                            <!-- <span>Sat-Sun</span>
+                            9:30 AM - 2:30 PM -->
                         </p>
                         <br>
                         <p class="copyright-text">Copyright © 2023 OOYSHG</p>
