--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                     <div class="row">
 
                         <div class="col-lg-12 col-12">
-                            <h2 class="mb-lg-3">Upcoming Projects</h2>
+                            <h2 class="mb-lg-3">Latest Projects</h2>
                         </div>
 
                         <div class="row custom-block mb-3">
@@ -317,7 +317,7 @@
 
                             <div class="col-lg-6 col-12 order-3 order-lg-0">
                                 <div class="custom-block-info mt-2 mt-lg-0">
-                                    <a href="event-detail.html" class="events-title mb-3">
+                                    <a href="community_based_systems.html" class="events-title mb-3">
                                         Community Driven Systems Change – 2022
                                     </a>
 
@@ -327,20 +327,20 @@
 
                                         <div class="mb-4 mb-lg-0">
                                             <div class="d-flex flex-wrap align-items-center mb-1">
-                                                <span class="custom-block-span">Location:</span>
+                                                <span class="custom-block-span">Partners:</span>
 
-                                                <p class="mb-0">National Center, NYC</p>
+                                                <p class="mb-0">FIRELIGHT FOUNDATION AND IMAGINABLE FUTURES</p>
                                             </div>
 
-                                            <div class="d-flex flex-wrap align-items-center">
-                                                <span class="custom-block-span">Ticket:</span>
+                                            <!-- <div class="d-flex flex-wrap align-items-center">
+                                                <span class="custom-block-span">Partners:</span>
 
                                                 <p class="mb-0">$250</p>
-                                            </div>
+                                            </div> -->
                                         </div>
 
                                         <div class="d-flex align-items-center ms-lg-auto">
-                                            <a href="event-detail.html" class="btn custom-btn">Buy Ticket</a>
+                                            <a href="community_based_systems.html" class="btn custom-btn">Read more..</a>
                                         </div>
                                     </div>
                                 </div>
@@ -350,7 +350,7 @@
                         <div class="row custom-block custom-block-bg">
                             <div class="col-lg-2 col-md-4 col-12 order-2 order-md-0 order-lg-0">
                                 <div class="custom-block-date-wrap d-flex d-lg-block d-md-block align-items-center mt-3 mt-lg-0 mt-md-0">
-                                    <h6 class="custom-block-date mb-lg-1 mb-0 me-3 me-lg-0 me-md-0">02</h6>
+                                    <h6 class="custom-block-date mb-lg-1 mb-0 me-3 me-lg-0 me-md-0">AUG</h6>
                                     
                                     <strong class="text-white">2022</strong>
                                 </div>
@@ -368,7 +368,7 @@
 
                             <div class="col-lg-6 col-12 order-3 order-lg-0">
                                 <div class="custom-block-info mt-2 mt-lg-0">
-                                    <a href="event-detail.html" class="events-title mb-3">Solar Electric Fence – 2022</a>
+                                    <a href="solar_electric_fence_2022.html" class="events-title mb-3">Solar Electric Fence – 2022</a>
 
                                     <p class="mb-0">This is intended to cover only the area of the project where the water tanks, water troughs and spray race are located, an estimated 2 acre piece of land. A solar electric fence is preferable since it is long lasting, renewable energy and has a low cost of maintenance.</p>
 
@@ -378,18 +378,18 @@
                                             <div class="d-flex flex-wrap align-items-center mb-1">
                                                 <span class="custom-block-span">Location:</span>
 
-                                                <p class="mb-0">National Center, NYC</p>
+                                                <p class="mb-0">The Sempewueti Water Project</p>
                                             </div>
 
                                             <div class="d-flex flex-wrap align-items-center">
-                                                <span class="custom-block-span">Ticket:</span>
+                                                <span class="custom-block-span">Partners:</span>
 
-                                                <p class="mb-0">$350</p>
+                                                <p class="mb-0">KCAA</p>
                                             </div>
                                         </div>
 
                                         <div class="d-flex align-items-center ms-lg-auto">
-                                            <a href="event-detail.html" class="btn custom-btn">Buy Ticket</a>
+                                            <a href="solar_electric_fence_2022.html" class="btn custom-btn">Read more..</a>
                                         </div>
                                     </div>
                                 </div>
@@ -430,10 +430,7 @@
 
                         <div class="col-lg-12 col-12 text-center">
                             <h2 class="mb-lg-5 mb-4">Sponsors & Partners</h2>
-                            <hr class="team_hr team_hr_left hr_gray"/><span class="txt_darkgrey">OUR PARTNERS</span>
-                            <hr class="team_hr team_hr_right hr_gray" />
                         </div>
-
                     </div>
                 </div>
             </section>
@@ -531,10 +528,6 @@
                             8:00 AM - 5:00 PM
                         </p>
 
-                        <p class="d-flex me-lg-3">
-                            <span>Sat-Sun</span>
-                            9:30 AM - 2:30 PM
-                        </p>
                         <br>
                         <p class="copyright-text">Copyright © 2023 OOYSHG</p>
                     </div>
