--- a/projects.html
+++ b/projects.html
@@ -180,12 +180,12 @@
                     <div class="row">
 
                         <div class="col-lg-12 col-12">
-                            <h2 class="mb-lg-5 mb-4">Upcoming Projects</h2>
+                            <h2 class="mb-lg-5 mb-4">Latest Projects</h2>
                         </div>
 
                         <div class="col-lg-6 col-12 mb-5 mb-lg-0">
                             <div class="custom-block-image-wrap">
-                                <a href="event-detail.html">
+                                <a href="community_based_systems.html">
                                     <img src="images/Community-Driven-Systems.jpg" class="custom-block-image img-fluid" alt="">
 
                                     <i class="custom-block-icon bi-link"></i>
@@ -196,12 +196,12 @@
                                 </div>
 
                                 <div class="custom-btn-wrap">
-                                    <a href="event-detail.html" class="btn custom-btn">Buy Ticket</a>
+                                    <a href="community_based_systems.html" class="btn custom-btn">Know more..</a>
                                 </div>
                             </div>
 
                             <div class="custom-block-info">
-                                <a href="event-detail.html" class="events-title mb-2">Community Driven Systems Change – 2022</a>
+                                <a href="community_based_systems.html" class="events-title mb-2">Community Driven Systems Change – 2022</a>
 
                                 <p class="mb-0"></p>
 
@@ -224,7 +224,7 @@
 
                         <div class="col-lg-6 col-12">
                             <div class="custom-block-image-wrap">
-                                <a href="event-detail.html">
+                                <a href="solar_electric_fence_2022.html">
                                     <img src="images/Logo-white.jpg" class="custom-block-image img-fluid" alt="">
 
                                     <i class="custom-block-icon bi-link"></i>
@@ -235,12 +235,12 @@
                                 </div>
 
                                 <div class="custom-btn-wrap">
-                                    <a href="event-detail.html" class="btn custom-btn">Buy Ticket</a>
+                                    <a href="solar_electric_fence_2022.html" class="btn custom-btn">Know more..</a>
                                 </div>
                             </div>
 
                             <div class="custom-block-info">
-                                <a href="event-detail.html" class="events-title mb-2">Solar Electric Fence – 2022</a>
+                                <a href="solar_electric_fence_2022.html" class="events-title mb-2">Solar Electric Fence – 2022</a>
 
                                 <p class="mb-0">This is intended to cover only the area of the project where the water tanks, water troughs and spray race are located, an estimated 2 acre piece of land. A solar electric fence is preferable since it is long lasting, renewable energy and has a low cost of maintenance.</p>
 
@@ -271,7 +271,7 @@
                     <div class="row">
 
                         <div class="col-lg-12 col-12">
-                            <h2 class="mb-3">Previous Events</h2>
+                            <h2 class="mb-3">Previous Projects</h2>
                         </div>
 
                         <div class="row custom-block mb-3">
@@ -285,7 +285,7 @@
 
                             <div class="col-lg-4 col-md-8 col-12 order-1 order-lg-0">
                                 <div class="custom-block-image-wrap">
-                                    <a href="event-detail.html">
+                                    <a href="tree_nursery.html">
                                         <img src="images/Tree-nursery.jpg" class="custom-block-image img-fluid" alt="">
 
                                         <i class="custom-block-icon bi-link"></i>
@@ -295,7 +295,7 @@
 
                             <div class="col-lg-6 col-12 order-3 order-lg-0">
                                 <div class="custom-block-info mt-2 mt-lg-0">
-                                    <a href="event-detail.html" class="events-title mb-3">
+                                    <a href="tree_nursery.html" class="events-title mb-3">
                                         Tree Nursery and Beehive Apiary – 2021
                                     </a>
 
@@ -317,9 +317,9 @@
                                             </div>
                                         </div>
 
-                                        <!-- <div class="d-flex align-items-center ms-lg-auto">
-                                            <a href="#" class="btn custom-btn">Know more</a>
-                                        </div> -->
+                                        <div class="d-flex align-items-center ms-lg-auto">
+                                            <a href="tree_nursery.html" class="btn custom-btn">Read more</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -336,7 +336,7 @@
 
                             <div class="col-lg-4 col-md-8 col-12 order-1 order-lg-0">
                                 <div class="custom-block-image-wrap">
-                                    <a href="event-detail.html">
+                                    <a href="modern_cattle_spray_race.html">
                                         <img src="images/Spray-Race.jpg" class="custom-block-image img-fluid" alt="">
 
                                         <i class="custom-block-icon bi-link"></i>
@@ -346,7 +346,7 @@
 
                             <div class="col-lg-6 col-12 order-3 order-lg-0">
                                 <div class="custom-block-info mt-2 mt-lg-0">
-                                    <a href="event-detail.html" class="events-title mb-3">
+                                    <a href="modern_cattle_spray_race.html" class="events-title mb-3">
                                         Spray Race – 2020
                                     </a>
 
@@ -368,9 +368,9 @@
                                             </div>
                                         </div>
 
-                                        <!-- <div class="d-flex align-items-center ms-lg-auto">
-                                            <a href="#" class="btn custom-btn">Read more</a>
-                                        </div> -->
+                                        <div class="d-flex align-items-center ms-lg-auto">
+                                            <a href="modern_cattle_spray_race.html" class="btn custom-btn">Read more</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
