--- a/tree_nursery.html
+++ b/tree_nursery.html
@@ -33,7 +33,7 @@
             <nav class="navbar navbar-expand-lg">                
                 <div class="container">
                     <a class="navbar-brand d-flex align-items-center" href="index.html">
-                        <img src="images/logo.png" class="navbar-brand-image img-fluid" alt="Tiya Golf Club">
+                        <img src="images/logo.png" class="navbar-brand-image img-fluid" alt="OOYSHG">
                         <span class="navbar-brand-text">
                             Oldoinyo Orok
                             <small>Youth Self Help Group</small>
