--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="">
 
         <link rel="icon" type="image/png" href="images/logo.png">
-        <title>Oldoinyo Orok Youth Self Help Group</title>
+        <title>Oldonyo Orok Youth Self Help Group</title>
 
         <!-- CSS FILES -->   
                      
@@ -38,7 +38,7 @@
                     <a class="navbar-brand d-flex align-items-center" href="index.html">
                         <img src="images/logo.png" class="navbar-brand-image img-fluid" alt="Tiya Golf Club">
                         <span class="navbar-brand-text">
-                            Oldoinyo Orok
+                            Oldonyo Orok
                             <small>Youth Self Help Group</small>
                         </span>
                     </a>
@@ -103,7 +103,7 @@
 
                 <div class="section-overlay"></div>
 
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#3D405B" fill-opacity="1" d="M0,224L34.3,192C68.6,160,137,96,206,90.7C274.3,85,343,139,411,144C480,149,549,107,617,122.7C685.7,139,754,213,823,240C891.4,267,960,245,1029,224C1097.1,203,1166,181,1234,160C1302.9,139,1371,117,1406,106.7L1440,96L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#008000" fill-opacity="1" d="M0,224L34.3,192C68.6,160,137,96,206,90.7C274.3,85,343,139,411,144C480,149,549,107,617,122.7C685.7,139,754,213,823,240C891.4,267,960,245,1029,224C1097.1,203,1166,181,1234,160C1302.9,139,1371,117,1406,106.7L1440,96L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"></path></svg>
 
                 <div class="container">
                     <div class="row">
@@ -112,7 +112,7 @@
                             <h2 class="text-white">Welcome to</h2>
 
                             <h1 class="cd-headline rotate-1 text-white mb-4 pb-2">
-                                <span>Oldoinyo Orok</span>
+                                <span>Oldonyo Orok</span>
                                 <span class="cd-words-wrapper">
                                     <b class="is-visible">Youth</b>
                                     <b>Self</b>
@@ -137,7 +137,7 @@
                     </div>
                 </div>
 
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,224L34.3,192C68.6,160,137,96,206,90.7C274.3,85,343,139,411,144C480,149,549,107,617,122.7C685.7,139,754,213,823,240C891.4,267,960,245,1029,224C1097.1,203,1166,181,1234,160C1302.9,139,1371,117,1406,106.7L1440,96L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#87cefa" fill-opacity="1" d="M0,224L34.3,192C68.6,160,137,96,206,90.7C274.3,85,343,139,411,144C480,149,549,107,617,122.7C685.7,139,754,213,823,240C891.4,267,960,245,1029,224C1097.1,203,1166,181,1234,160C1302.9,139,1371,117,1406,106.7L1440,96L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
             </section>
 
 
@@ -213,7 +213,7 @@
                             <div class="section-bg-image-block">
                                 <h2 class="mb-lg-3">Get our newsletter</h2>
 
-                                <p>Stay connected with the Oldoinyo Orok Self Help Group community! Subscribe to our newsletter for updates on empowering initiatives, success stories, and opportunities to make a positive impact.</p>
+                                <p>Stay connected with the Oldonyo Orok Self Help Group community! Subscribe to our newsletter for updates on empowering initiatives, success stories, and opportunities to make a positive impact.</p>
 
                                 <form action="#" method="get" class="custom-form mt-lg-4 mt-2" role="form">
                                     <div class="input-group input-group-lg">
@@ -475,7 +475,7 @@
                         <a class="navbar-brand d-flex align-items-center" href="index.html">
                             <img src="images/logo.png" class="navbar-brand-image img-fluid" alt="">
                             <span class="navbar-brand-text">
-                                Oldoinyo Orok
+                                Oldonyo Orok
                                 <small>Youth Self Help Group</small>
                             </span>
                         </a>
@@ -490,7 +490,7 @@
                         </p>
 
                         <br>
-                        <p class="copyright-text">Copyright © 2023 OOYSHG</p>
+                        <p class="copyright-text">Copyright © 2024 OOYSHG</p>
                     </div>
 
                         <div class="col-lg-2 col-12 ms-auto">
