Climate Action update

--- a/aboutus.html
+++ b/aboutus.html
@@ -41,7 +41,7 @@
                     </a>
 
                     <div class="d-lg-none ms-auto me-3">
-                        <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="maa_youth_for_climate_change.html" role="button" aria-controls="offcanvasExample">Climate Change</a>
+                        <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="maa_youth_for_climate_change.html" role="button" aria-controls="offcanvasExample">Climate Action</a>
                     </div>
     
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -90,7 +90,7 @@
                         </ul>
 
                         <div class="d-none d-lg-block ms-lg-3">
-                            <a class="nav-link btn custom-btn custom-border-btn"  href="maa_youth_for_climate_change.html">Climate Change</a>
+                            <a class="nav-link btn custom-btn custom-border-btn"  href="maa_youth_for_climate_change.html">Climate Action</a>
                         </div>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                                     <a href="#">
                                         <img src="images/icons/about-us-icon.jpeg" class="custom-block-image img-fluid" alt="">
 
-                                        <i class="custom-block-icon bi-link"></i>
+                                        <!-- <i class="custom-block-icon bi-link"></i> -->
                                     </a>
                                 </div>
                             </div>
@@ -155,7 +155,7 @@
                                     <a href="#">
                                         <img src="images/icons/mission-and-vision-icon.jpeg" class="custom-block-image img-fluid" alt="">
 
-                                        <i class="custom-block-icon bi-link"></i>
+                                        <!-- <i class="custom-block-icon bi-link"></i> -->
                                     </a>
                                 </div>
                             </div>
@@ -180,7 +180,7 @@
                                     <a href="#">
                                         <img src="images/icons/goals.png" class="custom-block-image img-fluid" alt="">
 
-                                        <i class="custom-block-icon bi-link"></i>
+                                        <!-- <i class="custom-block-icon bi-link"></i> -->
                                     </a>
                                 </div>
                             </div>
@@ -211,7 +211,7 @@
                                     <a href="#">
                                         <img src="images/icons/objectives.png" class="custom-block-image img-fluid" alt="">
 
-                                        <i class="custom-block-icon bi-link"></i>
+                                        <!-- <i class="custom-block-icon bi-link"></i> -->
                                     </a>
                                 </div>
                             </div>
