--- a/donate.html
+++ b/donate.html
@@ -41,7 +41,7 @@
                     </a>
 
                     <div class="d-lg-none ms-auto me-3">
-                        <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="maa_youth_for_climate_change.html" role="button" aria-controls="offcanvasExample">Climate Change</a>
+                        <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="maa_youth_for_climate_change.html" role="button" aria-controls="offcanvasExample">Climate Action</a>
                     </div>
     
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -90,7 +90,7 @@
                         </ul>
 
                         <div class="d-none d-lg-block ms-lg-3">
-                            <a class="nav-link btn custom-btn custom-border-btn"  href="maa_youth_for_climate_change.html">Climate Change</a>
+                            <a class="nav-link btn custom-btn custom-border-btn"  href="maa_youth_for_climate_change.html">Climate Action</a>
                         </div>
                     </div>
                 </div>
@@ -166,9 +166,9 @@
                                             </div>
                                         </div>
 
-                                        <div class="d-flex align-items-center ms-lg-auto">
+                                        <!-- <div class="d-flex align-items-center ms-lg-auto">
                                             <a href="event-detail.html" class="btn custom-btn">Buy Ticket</a>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
