--- a/maa_youth_for_climate_change.html
+++ b/maa_youth_for_climate_change.html
@@ -41,7 +41,7 @@
                     </a>
 
                     <div class="d-lg-none ms-auto me-3">
-                        <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="maa_youth_for_climate_change.html" role="button" aria-controls="offcanvasExample">Climate Change</a>
+                        <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="maa_youth_for_climate_change.html" role="button" aria-controls="offcanvasExample">Climate Action</a>
                     </div>
     
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -90,7 +90,7 @@
                         </ul>
 
                         <div class="d-none d-lg-block ms-lg-3">
-                            <a class="nav-link btn custom-btn custom-border-btn"  href="maa_youth_for_climate_change.html">Climate Change</a>
+                            <a class="nav-link btn custom-btn custom-border-btn"  href="maa_youth_for_climate_change.html">Climate Action</a>
                         </div>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                             <div class="custom-block-info">
                                 <h3 class="mb-3">VISION AND MISSION</h3>
 
-                                <p>To nature a youthful generation that is mindful and protective of the environment, foster climate adaptation and implement climate change intervention initiatives in the Maa community.</p>
+                                <p>To nature a youthful generation that is mindful and protective of the environment, foster climate adaptation and implement Climate Action intervention initiatives in the Maa community.</p>
                                 
                             </div>
 
