--- a/tree_nursery.html
+++ b/tree_nursery.html
@@ -41,7 +41,7 @@
                     </a>
 
                     <div class="d-lg-none ms-auto me-3">
-                        <a class="nav-link btn custom-btn custom-border-btn"  href="maa_youth_for_climate_change.html">Climate Change</a>
+                        <a class="nav-link btn custom-btn custom-border-btn"  href="maa_youth_for_climate_change.html">Climate Action</a>
                     </div>
     
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
